# rust-cli-template

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  dist-workspace.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release-preflight.yml  release.yml
docs/: adding-ratatui.md  adding-sqlite.md  adding-tokio.md  error-handling.md  releasing.md
scripts/: policy-checks.sh
src/: cli.rs  config.rs  exit.rs  lib.rs  logging.rs  main.rs  output.rs  paths.rs
src/commands/: completions.rs  config.rs  hello.rs  mod.rs
tap/: README.md
tests/: cli.rs
xtask/: Cargo.toml
xtask/src/: init.rs  main.rs  sync.rs
